# minifigure_id

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup_production_database.py
config/: settings.py
data/: minifigure_database.db  minifigure_valuation.db  test_real_database.db
data/backups/: backup_valuations.db  valuation_backup_20250906_131708.json  valuation_backup_20250906_131712.json
data/reports/: valuation_report_20250905_235359_50691812.html  valuation_report_20250906_073159_98365e3f.html  valuation_report_20250906_073831_219fd6ea.html  valuation_report_20250906_080004_f8003d14.html  valuation_report_20250906_083437_b5a1dab1.html  valuation_report_20250906_090650_d65e2113.html  valuation_report_20250906_090736_aadecca5.html  valuation_report_20250906_090908_e84ef6ac.html  valuation_report_20250906_091453_53ed2831.html  valuation_report_20250906_092829_f3e8410e.html  valuation_report_20250906_093007_d9792cee.html  valuation_report_20250906_094132_d8d19c46.html  (+19 more)
docs/: api-documentation.md  bricklink-api-setup.md  comprehensive-architecture.md  enhanced-features.md  testing-and-deployment.md  troubleshooting.md
src/api/: main.py
tests/: api_test_utils.py  debug_tests.py  test_api_endpoints.py  test_api_simple.py  test_basic.py  test_bricklink_client.py  test_database.py  test_database_identifier.py  test_enhanced_main.py  test_image_processor.py  test_integration.py  test_lego_identifier.py  test_production_database_builder.py  test_repo_fixes.py  test_report_generator.py  validate_tests.py  verify_fixes.py
(+25 files in other folders)
